--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -80,10 +80,9 @@
                 <img src="images/slider1.png">
                 <img src="images/slider2.png">
                 <img src="images/Banner.jpeg">
-                <img src="images/BloodBank_Slider.jpg">
+                <img src="images/RotiBank_Slider.jpg">
                 <img src="images/CoronaBanner.jpeg">
                 <img src="images/ehsaas&saylani.jpeg">
-                <img src="images/RotiBank_Slider.jpg">
             </figure>
         </div>
     </div>
@@ -213,27 +212,27 @@
 
         <div class="card-container mx-5">
             <div class="innerbox">
-                <img src="./images/wwd/onlinesadqah.png" alt="">
+                <img src="images/wwd/onlinesadqah.png" alt="">
                 <h3>ONLINE SADQAH</h3>
             </div>
             <div class="innerbox">
-                <img src="./images/wwd/welfare.png" alt="">
+                <img src="images/wwd/welfare.png" alt="">
                 <h3>WELFARE</h3>
             </div>
             <div class="innerbox">
-                <img src="./images/wwd/medical.png" alt="">
+                <img src="images/wwd/medical.png" alt="">
                 <h3>MEDICAL</h3>
             </div>
             <div class="innerbox">
-                <img src="./images/wwd/dastar.png" alt="">
+                <img src="images/wwd/dastar.png" alt="">
                 <h3>DASTARKHWAN</h3>
             </div>
             <div class="innerbox">
-                <img src="./images/wwd/ROPLANT.png" alt="">
+                <img src="images/wwd/ROPLANT.png" alt="">
                 <h3>RO PLANT</h3>
             </div>
             <div class="innerbox">
-                <img src="./images/wwd/education.png" alt="">
+                <img src="images/wwd/education.png" alt="">
                 <h3>EDUCATION</h3>
             </div>
 
@@ -257,14 +256,14 @@
                         <div class="row">
                             <div style="color: rgb(58, 110, 206); font-weight: 500;" class="col-md-6">
                                 <div style="background-color: #f7f8fa;" class="p-3 border ">
-                                    <img src="./images//wwd/Hepatitis.png" alt="">
+                                    <img src="images/wwd/Hepatitis.png" alt="">
                                     <span class="text-primary ml-3 ">HEPATITIS</span>
                                 </div>
                             </div>
                             <div style="color: rgb(58, 110, 206); font-weight: 500;" class="col-md-6 ">
                                 <div style="background-color: #f7f8fa;" class="p-3 border ">
-                                    <img src="./images/wwd/housing.png" alt="">
-                                    <span class="ml-3 text-primary">HOUSING SOCIETY</span>
+                                    <img src="images/wwd/housing.png" alt="">
+                                    <span class=" ml-3 text-primary">HOUSING SOCIETY</span>
                                 </div>
                             </div>
                         </div>
@@ -272,13 +271,13 @@
                         <div class="row">
                             <div style="color: rgb(58, 110, 206); font-weight: 500;" class="col-md-6">
                                 <div style="background-color: #f7f8fa;" class="p-3 border ">
-                                    <img src="./images/wwd/IT.png" alt="">
+                                    <img src="images/wwd/IT.png" alt="">
                                     <span class="ml-3 text-primary">IT LITERACY</span>
                                 </div>
                             </div>
                             <div style="color: rgb(58, 110, 206); font-weight: 500;" class="col-md-6">
                                 <div style="background-color: #f7f8fa;" class="p-3 border ">
-                                    <img src="./images/wwd/tharparkar.png" alt="">
+                                    <img src="images/wwd/tharparkar.png" alt="">
                                     <span class="ml-3">THARPARKAR</span>
                                 </div>
                             </div>
@@ -328,11 +327,11 @@
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="./images/hazrat.jpg">
-                <img src="./images/food.jpg">
-                <img src="./images/rashan2.jpg">
-                <img src="./images/d.jpg">
-                <img src="./images/RotiBank_Slider.jpg">
+                <img src="images/hazrat.jpg">
+                <img src="images/food.jpg">
+                <img src="images/rashan2.jpg">
+                <img src="images/d.jpg">
+                <img src="images/RotiBank_Slider.jpg">
             </div>
         </div>
 
