--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -14,42 +14,27 @@
 
 <body>
     <!-- Top -->
-    <div class="container-fluid d-flex flex-row justify-content-center align-items-center top-nav py-1">
-        <ul class="d-flex flex-row justify-content-between align-items-center m-2 social" style="width: 12%;">
-            <li>
-                <a class="fa fa-facebook"></a>
-            </li>
-            <li>
-                <a class="fa fa-twitter"></a>
-            </li>
-            <li>
-                <a class="fa fa-instagram"></a>
-            </li>
-            <li>
-                <a class="fa fa-youtube"></a>
-            </li>
-            <li>
-                <a class="fa fa-whatsapp"></a>
-            </li>
-        </ul>
-
-        <div class="mx-5">
-            <p class="m-0 p-0" style="color: white; font-size: 14px;">
-                Millions of people's life has changed, millions more awaiting your
-                Donation
-            </p>
-        </div>
-
-        <div>
-            <button type="button" class="btn btn-light btn-sm top-btn">
-                UK Doners
-            </button>
-            <button type="button" class="btn btn-light btn-sm top-btn">
-                Donate Now
-            </button>
-            <button type="button" class="btn btn-light btn-sm top-btn">
-                SMIT Result
-            </button>
+    <div class="topbar  text-light  py-2  text-center">
+        <div class="container ">
+            <div class="row">
+                <div class="col-md-3 mx-0">
+                    <div class="social">
+                        <i class="fa fa-facebook px-2"></i>
+                        <i class="fa fa-twitter px-2"></i>
+                        <i class="fa fa-instagram px-2"></i>
+                        <i class="fa fa-youtube px-2"></i>
+                        <i class="fa fa-whatsapp px-2"></i>
+                    </div>
+                </div>
+                <div class="col-md-6 mx-0">
+                    Millions of people's life has changed, millions more awaiting your donation
+                </div>
+                <div class="col-md-3 head-buttons ">
+                    <a href="#" class="btn btn-light btn-sm hello">UK Donors</a>
+                    <a href="#" class="btn btn-light btn-sm hello">Donate Now</a>
+                    <a href="#" class="btn btn-light btn-sm hello">SMIT Result</a>
+                </div>
+            </div>
         </div>
     </div>
 
