--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <a href=".\Assignment1\PeriodicTable.html" class="myButton">Assignment 1</a>
     <a href=".\Assignment2\RegisterationForm.html" class="myButton">Assignment 2</a>
     <a href=".\Assignment3\index.html" class="myButton">Assignment 3</a>
+    <a href=".\Assignment4\index.html" class="myButton">Assignment 4</a>
 </body>
 
 </html>
